objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Account_Discount__c</fullName>
        <label>Account Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>com__c</fullName>
        <label>Commission Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>maxcomms__c</fullName>
        <formula>MAX( $User.Commission_Percent__c * Price , Price * Account_Discount__c ,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>maxcomms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>